refactor: 통계값 추가 에러 처리